[gd_scene load_steps=7 format=3 uid="uid://cfvt1edaxbap6"]

[ext_resource type="Script" path="res://scripts/hud_smierc_space_invaders.gd" id="1_m62pn"]
[ext_resource type="Texture2D" uid="uid://conmdxw5cnjjg" path="res://assets/spirites/spaceInvaders/tło szersze.png" id="2_y4tdm"]
[ext_resource type="Texture2D" uid="uid://b8jvanixdh1np" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7 copy.png" id="3_hsll1"]
[ext_resource type="Texture2D" uid="uid://dgp61t7y7oo2a" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7 copy 2-2.png" id="4_xm2vj"]
[ext_resource type="Texture2D" uid="uid://bg1ek3jicmcov" path="res://assets/spirites/menu, przyciski/menu, przyciski/Layer 7 copy 2-1.png" id="5_iy4wh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vv8p7"]
bg_color = Color(0.395684, 0.533277, 0.914765, 0.666667)

[node name="hud_smierc" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m62pn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -540.0
offset_right = 540.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y4tdm")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -153.0
offset_right = 276.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vv8p7")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Przegrałes"

[node name="Label2" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Restart" type="TextureButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_hsll1")

[node name="powrotDoMenu2" type="TextureButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_xm2vj")

[node name="wyjdz" type="TextureButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_iy4wh")

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/powrotDoMenu2" to="." method="_on_powrot_do_menu_2_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/wyjdz" to="." method="_on_wyjdz_pressed"]
